# src/components/transaction/transaction.router.ts
@@ -1,9 +1,15 @@
 import { Router } from 'express';
-import { retrieveTransactions, retrieveTransactionsByHashId ,getLatestTransactionList} from './transaction.controller';
+import {
+  retrieveTransactions,
+  retrieveTransactionsByHashId,
+  getLatestTransactionList,
+  retrieveThirtyDayTransactionNumber,
+} from './transaction.controller';
 
 const router: Router = Router();
 
 router.get('/transaction/', retrieveTransactions);
 router.get('/transaction/:hashId', retrieveTransactionsByHashId);
 router.get('/transaction/fetch/latestTransactionList', getLatestTransactionList);
+router.get('/transaction/latestThirtyDay/transactionNumber', retrieveThirtyDayTransactionNumber);
 export default router;
