# src/swagger.json
@@ -371,6 +371,30 @@
           }
         }
       }
+    },
+    "/api/transaction/latestThirtyDay/transactionNumber": {
+      "get": {
+        "tags": ["retrieve transactions"],
+        "description": "Retrieve latestThirtyDayTransactionNumber",
+        "responses": {
+          "200": {
+            "description": "Transaction",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ResponseWithMessage"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Transaction not found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   },
   "components": {
